[gd_scene load_steps=3 format=3 uid="uid://126tu5n10ffa"]

[ext_resource type="PackedScene" uid="uid://yq3hrs46cqs2" path="res://objects/hitbox/hitbox.tscn" id="1_7vqr0"]
[ext_resource type="Script" path="res://actors/animals/animal.gd" id="1_lcfw2"]

[node name="Animal" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 67
script = ExtResource("1_lcfw2")

[node name="Timers" type="Node" parent="."]

[node name="IdleTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true
autostart = true

[node name="WanderTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="FleeTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true

[node name="DisappearAfterDeathTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]

[node name="Hitbox" parent="." instance=ExtResource("1_7vqr0")]

[node name="MeatSpawnMarker" type="Marker3D" parent="."]

[node name="EyesMarker" type="Marker3D" parent="."]

[node name="AttackHitArea" type="Area3D" parent="."]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[connection signal="timeout" from="Timers/IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="Timers/WanderTimer" to="." method="_on_wander_timer_timeout"]
[connection signal="timeout" from="Timers/FleeTimer" to="." method="_on_flee_timer_timeout"]
[connection signal="timeout" from="Timers/DisappearAfterDeathTimer" to="." method="_on_disappear_after_death_timer_timeout"]
[connection signal="register_hit" from="Hitbox" to="." method="take_hit"]
